<resources>
    <string name="app_name">Hotels Membership</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Offers</string>
    <string name="my_profle">My Profle</string>
    <string name="add_membership">Add Membership</string>
    <string name="my_memberships">My Memberships</string>
    <string name="submit">Submit</string>
    <string name="valid_upto">Valid Upto</string>
    <string name="contact_number">Contact Number</string>
    <string name="card_number">Card Number</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="error_field_required">This is required</string>
    <string name="error_field_nohotel">No such Hotel Found</string>
    <string name="error_field_novenue">No such Venue Found</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="done">DONE</string>
    <string name="card_holder_name_sample">JOHN MATTHEW</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="expiry">EXPIRY</string>
    <string name="mm_yy">MM/YY</string>
    <string name="card_expiry">CARD EXPIRY</string>
    <string name="card_mm_yy">MM/YY</string>
    <string name="name_on_card">NAME ON CARD</string>
    <string name="error_invalid_month">Invalid month</string>
    <string name="error_card_expired">Card expired</string>
    <string name="redeem">Redeem</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="voucher_image">Voucher Image</string>
    <string name="cardnum_hint">XXXX XXXX XXXX</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="title_activity_vouchers">Vouchers</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name">Your Name</string>
    <string name="card_placeholder">XXXX XXXX XXXX</string>
    <string name="book_table">Book Table</string>
    <string name="book_room">Book Room</string>
    <string name="vouchers">Vouchers</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="i_accept_terms_and_conditions">I accept the terms and conditions.</string>
    <string name="valid_through">Valid through</string>
    <string name="venue_name">Venue Name</string>
    <string name="number_of_persons">Number of persons</string>
    <string name="reservation_date">Reservation Date</string>
    <string name="time_slot">Time Slot</string>
    <string name="check_in">Check In Date</string>
    <string name="title_activity_membership">MembershipActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="card">Card</string>
    <string name="check_out_date">Check Out Date</string>
    <string name="sms_permission">Grant permission to read SMS to autofill the OTP.</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <string name="voucher_detail">Voucher Detail</string>
    <string name="discount_detail">Discount detail</string>
    <string name="occupancy">Occupancy</string>
    <string name="contact_us">Contact Us</string>
    <string name="venues">Venues</string>

    <string name="title_activity_card_fullscreen">CardFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="close">Close</string>
    <string name="remarks">Remarks</string>
    <string name="reservation">Reservation</string>
    <string name="none">None</string>
</resources>
