<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data >
        <variable name="data" type="hotelsmembership.com.Model.TableReservationPayload"/>
    </data>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/venue_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={data.venue}"
                    android:hint="@string/venue_name"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/paxCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_of_persons"
                    android:text="@={`` + data.paxCount}"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reservation_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reservation_date"
                    android:text="@={data.reservationDate}"
                    android:inputType="none"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/time_slot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_slot"
                    android:text="@={data.timeSlot}"
                    android:inputType="none"
                    android:imeOptions="actionNext"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/discount_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/discount_detail"
                    android:text="@={data.discountDetail}"
                    android:inputType="none"
                    android:imeOptions="actionDone"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/voucher_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/voucher_detail"
                    android:text="@={data.voucherDetail}"
                    android:inputType="none"
                    android:imeOptions="actionDone"
                     />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/remarks"
                    android:text="@={data.remarks}"
                    android:inputType="textAutoCorrect"
                    android:imeOptions="actionDone"
                     />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/submit_Btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/darker_gray"
                android:background="@drawable/button"
                android:layout_marginStart="72dp"
                android:layout_marginEnd="72dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>