<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data >
        <variable name="data" type="hotelsmembership.com.Model.RoomReservationPayload"/>
    </data>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/venue_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/venue_name"
                    android:text="@={data.venue}"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/checkin_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/check_in"
                    android:text="@={data.checkInDate}"
                    android:inputType="date"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/checkout_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/check_out_date"
                    android:text="@={data.checkOutDate}"
                    android:inputType="date"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/time_slot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/occupancy"
                    android:text="@={data.occupancy}"
                    android:inputType="none"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/discount_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/discount_detail"
                    android:text="@={data.discountDetail}"
                    android:inputType="none"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/voucher_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/voucher_detail"
                    android:text="@={data.voucherDetail}"
                    android:inputType="none"
                    android:imeOptions="actionDone"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/submit_Btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/holo_red_dark"
                android:background="@android:color/holo_red_light"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>