<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data >
        <variable name="data" type="hotelsmembership.com.Model.AddCardPayload"/>
        <variable
            name="imageUrl"
            type="String"/>
    </data>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@color/screenbg"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hotelLogo"
                android:visibility="gone"
                app:image_url="@{imageUrl}"
                />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/hotel_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/hotel_name"
                        android:inputType="textCapWords"
                        android:imeOptions="actionNext"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/holderName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:text="@={data.memberName}"
                        android:inputType="textCapWords"
                        android:imeOptions="actionNext"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/cardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_number"
                        android:text="@={data.cardNumber}"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact_number"
                        android:text="@={data.phoneNumber}"
                        android:inputType="phone"
                        android:imeOptions="actionDone"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/cardExpiryDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/valid_upto"
                        android:text="@={data.cardExpiryDate}"
                        android:inputType="date"
                        android:imeOptions="actionNone"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:checked="false"
                        android:id="@+id/checkbox"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/acceptTV"
                        android:text="@string/i_accept_terms_and_conditions"/>
                </LinearLayout>

                <Button
                    android:id="@+id/submit_Btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:shadowColor="@android:color/darker_gray"
                    android:background="@drawable/button"
                    android:layout_marginStart="64dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold" />
            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>