<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="VoucherDetailsBinding">
        <variable name="data" type="hotelsmembership.com.Model.Vouchers.Voucher"/>
    </data>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_margin="4dp"
            android:text="@={data.voucherNumber}"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_margin="24dp"
            >
        <ImageView
            android:id="@+id/voucher_IV"
            app:image_url="@{data.imageURL}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/voucher_image" />
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_margin="4dp"
            android:text="@={data.voucherCategory.categoryTitle}"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="4dp"
            android:text="@={data.voucherCategory.description}"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_amp_conditions"
            android:id="@+id/tnc_Btn"
            android:textColor="@android:color/white"
            android:shadowColor="@android:color/darker_gray"
            android:background="@drawable/button"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redeem"
        android:id="@+id/redeem_Btn"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/darker_gray"
        android:background="@drawable/button"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"/>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>